banner buttons exp tweaked, layout issues fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,4 +84,25 @@ button {
   .banner .banner_container {
     height: 80.5vh;
   }
+  .movieInfo__review {
+    padding: 0px 20px 50px 20px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .movieInfo__wrapperBg {
+    padding-top: 60px;
+    padding-bottom: 0px;
+  }
+  .movieInfo__contents {
+    padding-top: 0px;
+  }
+  .banner .banner__contents h1,
+  .movieInfo__contents h1 {
+    font-size: 2rem;
+    line-height: 35px;
+  }
+  .banner .banner__contents {
+    width: 70vw;
+  }
 }
