--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -3,7 +3,7 @@
   top: 0;
   height: 60px;
   width: 100%;
-  z-index: 1;
+  z-index: 11;
   display: flex;
   justify-content: space-between;
 
