--- a/src/containers/MovieInfo/MovieInfo.scss
+++ b/src/containers/MovieInfo/MovieInfo.scss
@@ -61,6 +61,9 @@
       }
     }
   }
+  button {
+    width: 170px;
+  }
 }
 .movieInfo__review {
   padding: 0px 50px 50px 50px;
